# RTC-Attacks

./: .gitignore  LICENSE  Makefile  QUICK_START.md  README.md  docker-compose.yaml  package-lock.json  package.json  server.js  snort-compose.yaml  suricata-compose.yaml  test_refactoring.py
database/: scenarios.json  users.json
docker-images/: .gitignore  README.md
experiments/: README.md  client.py  requirements.txt  server.py
infrastructure/: Makefile  README.md  cloud-init.yaml  example-workflow.sh  setup-bridge.sh  vm-config.env
logs/: compose.yaml  config.alloy
metrics-collector/: Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
metrics-collector/custom/metrics_collector/: cli.py  discovery.py  utils.py
metrics-collector/server/: compose.yaml  prometheus.yml
metrics-collector/src/metrics_collector/: cli.py  collectors.py  models.py
metrics-collector/tests/: README.md
metrics-collector/tests/e2e-stack/: Makefile  docker-compose.yml
metrics-collector/tests/e2e-stack/coredns/: Corefile
metrics-collector/tests/network-plan/: network_plan.json
public/: index.html
scenario-runner/: .gitignore  README.md  pyproject.toml
scenario-runner/src/scenario_runner/: __init__.py  cli.py  discovery.py  executor.py  ipc.py  ipc_client.py  models.py  planner.py  reporting.py  stopper.py  utils.py
scripts/: add_metrics_to_labs.sh  analyze_metrics.py  export_lab_images.sh  import_lab_images.sh  metrics_collector.py  requirements.txt  run_experiments.sh  statistical_analysis.py  sync_timezone_compose.py
snort/: Dockerfile  local.rules  run.sh  (+2 more)
(+123 files in other folders)
