[tool.poetry]
name = "metrics-collector"
version = "0.1.0"
description = "Reusable metrics collector for Docker/Compose RTC scenarios"
authors = ["Experimental Metrics Team"]
readme = "README.md"
packages = [{ include = "metrics_collector", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
click = "8.1.7"
pydantic = "^2.7.4"
PyYAML = "^6.0.2"
docker = "^7.1.0"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[tool.poetry.scripts]
metrics-collector = "metrics_collector.cli:app"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
